--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-#root{
+#root {
   padding: 0;
 }
 
-.Primary-btn{
+.Primary-btn {
   background: linear-gradient(270deg, #19C078 0%, #4FDF85 77.91%) !important;
   border: none !important;
 }
@@ -20,59 +20,13 @@
   font-weight: 500;
 }
 
-.App .Main-content .Form-content .Image{
-  width: 25%;
-}
-
-.App .Main-content .Form-content .Image img{
-  width: 100%;
-}
-
-.App .Main-content .Form-content .Form-content-body{
-  width: 75%;
-}
-
-@media (max-width: 1200px){
-  .App .Main-content .Form-content .Image{
-    width: 30%;
-  }
-  
-  .App .Main-content .Form-content .Form-content-body{
-    width: 70%;
-  }
-}
-
-@media (max-width: 991px){
-  .App .Main-content .Form-content .Image{
-    width: 40%;
-  }
-  
-  .App .Main-content .Form-content .Form-content-body{
-    width: 60%;
-  }
-}
-
-@media (max-width: 767px){
-  .App .Main-content .Form-content .Image{
-    width: 100%;
-    margin-bottom: 1rem;
-  }
-  
-  .App .Main-content .Form-content .Form-content-body{
-    width: 100%;
-  }
-
-  .App .Main-content .Form-content{
-    flex-direction: column;
-  }
-}
 
 /* End App */
 
 
 /* Upload */
 
-.Upload{
+.Upload {
   width: 100%;
   height: 380px;
   background-color: #f8f9fa;
@@ -80,20 +34,20 @@
   border-radius: 10px;
 }
 
-.Upload .Content{
+.Upload .Content {
   height: 85%;
 }
 
-.Upload .Content .image{
+.Upload .Content .image {
   max-width: 280px;
   max-height: 300px;
 }
 
-.Upload .Input-file{
+.Upload .Input-file {
   height: 15%;
 }
 
-.Upload .Input-file .Label-input {
+.Label-input {
   background: linear-gradient(270deg, #19C078 0%, #4FDF85 77.91%);
   border-radius: 20rem;
   color: white;
@@ -102,10 +56,20 @@
   cursor: pointer;
 }
 
-@media (max-width: 1200px){
-  .Upload .Content .image{
+@media (max-width: 1200px) {
+  .Upload .Content .image {
     max-width: 250px;
     max-height: 280px;
   }
 }
+
 /* End Upload */
+
+.Form-inputt{
+  width: 95%;
+}
+
+.Form-removee{
+  width: 5%;
+}
+
